--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"prettier": "^1.19.1",
 		"rollup": "^1.32.0",
 		"rollup-plugin-copy": "^3.3.0",
+		"rollup-plugin-includepaths": "^0.2.3",
 		"rollup-plugin-peer-deps-external": "^2.2.2",
 		"rollup-plugin-postcss": "^2.1.1",
 		"rollup-plugin-terser": "^5.2.0",
