--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 	],
 	"dependencies": {
 		"guyn": "0.0.13",
-		"vue": "^2.6.11"
+		"vue": "^2.6.11",
+		"vuex": "^3.1.2"
 	},
 	"devDependencies": {
 		"@rollup/plugin-alias": "^3.0.1",
