--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
 		"build:docs": "vuepress build src",
 		"build:icons": "sh scripts/icons.sh",
 		"build:colors": "sh scripts/colors.sh",
-		"build:components": "rollup -c"
+		"build:components": "rollup -c",
+		"lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+		"lint:fix": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
+		"stylelint": "stylelint '**/*.vue' '**/*.scss'",
+		"stylelint:fix": "stylelint '**/*.vue' '**/*.scss' --fix"
 	},
 	"repository": {
 		"type": "git",
@@ -36,6 +40,9 @@
 	],
 	"dependencies": {
 		"guyn": "0.0.13",
+		"stylelint": "^13.2.1",
+		"stylelint-logical-order": "0.0.6",
+		"stylelint-order": "^4.0.0",
 		"vue": "^2.6.11",
 		"vuex": "^3.1.3"
 	},
