--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Build Test Run
 
 # Controls when the action will run. Triggers the workflow on push or pull request 
 # events but only for the master branch
@@ -22,12 +22,18 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+    # Install dependencies
+    - name: Install deps
+      run: npm install
+      
+    # Run Stylelint
+    - name: Run stylelint
+      run: npm run stylelint
+      
+    # Run Build Docs
+    - name: Build Docs
+      run: npm run build:docs
+      
+    # Run Build Docs
+    - name: Build Docs
+      run: npm run build:docs
