Install deps in workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,8 @@ jobs:
       uses: actions/setup-node@master
       with:
         node-version: 10.0.0
+    - name: Install dependencies
+      run: npm install
     - name: Build Components
       run: npm run build:components 
     - name: Publish if version has been updated
