--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"main": "dist/index.js",
 	"module": "dist/index.es.js",
 	"scripts": {
-		"test": "test",
+		"test": "jest",
 		"dev": "vuepress dev src",
 		"build": "npm run build:components && npm run build:docs",
 		"build:docs": "vuepress build src",
@@ -59,10 +59,14 @@
 		"@vue/cli-plugin-vuex": "^4.2.3",
 		"@vue/cli-service": "^4.2.3",
 		"@vue/eslint-config-prettier": "^6.0.0",
+		"@vue/test-utils": "^1.0.0-beta.32",
 		"babel-eslint": "^10.1.0",
 		"eslint": "^6.8.0",
 		"eslint-plugin-prettier": "^3.1.2",
 		"eslint-plugin-vue": "^6.2.2",
+		"husky": "^4.2.3",
+		"jest": "^25.1.0",
+		"jest-transform-css": "^2.0.0",
 		"prettier": "^1.19.1",
 		"rollup": "^2.0.4",
 		"rollup-plugin-copy": "^3.3.0",
@@ -75,7 +79,13 @@
 		"sass": "^1.26.3",
 		"sass-loader": "^8.0.2",
 		"typescript": "^3.8.3",
+		"vue-jest": "^3.0.5",
 		"vue-template-compiler": "^2.6.11",
 		"vuepress": "^1.3.1"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "npm run stylelint:fix"
+		}
 	}
 }
