--- a/package.json
+++ b/package.json
@@ -60,12 +60,17 @@
 		"@vue/cli-service": "^4.2.3",
 		"@vue/eslint-config-prettier": "^6.0.0",
 		"@vue/test-utils": "^1.0.0-beta.32",
+		"babel-core": "^6.26.3",
 		"babel-eslint": "^10.1.0",
+		"babel-jest": "^25.1.0",
 		"eslint": "^6.8.0",
 		"eslint-plugin-prettier": "^3.1.2",
 		"eslint-plugin-vue": "^6.2.2",
 		"husky": "^4.2.3",
+		"identity-obj-proxy": "^3.0.0",
 		"jest": "^25.1.0",
+		"jest-css-modules": "^2.1.0",
+		"jest-css-modules-transform": "^4.0.0",
 		"jest-transform-css": "^2.0.0",
 		"prettier": "^1.19.1",
 		"rollup": "^2.0.4",
