--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,9 +30,9 @@ jobs:
     - name: Run stylelint
       run: npm run stylelint
       
-    # Run Build Docs
-    - name: Build Docs
-      run: npm run build:docs
+    # Run Build Components
+    - name: Build Components
+      run: npm run build:components
       
     # Run Build Docs
     - name: Build Docs
