--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
 		"url": "https://github.com/silvandiepen/guyn-ds/issues"
 	},
 	"homepage": "https://github.com/silvandiepen/guyn-ds#readme",
-	"main": "dist/index.js",
-	"module": "dist/index.es.js",
+	"main": "dist/index.umd.js",
+	"module": "dist/index.esm.js",
+	"cjs": "dist/index.cjs.js",
+	"unpkg": "dist/index.min.js",
+	"browser": {
+		"./sfc": "src/index.js"
+	},
 	"scripts": {
 		"test": "jest",
 		"dev": "vuepress dev src",
@@ -30,9 +35,6 @@
 		"type": "git",
 		"url": "git+ssh://git@github.com/silvandiepen/guyn-ds.git"
 	},
-	"publishConfig": {
-		"registry": "https://npm.pkg.github.com/"
-	},
 	"keywords": [
 		"Design",
 		"System",
@@ -48,6 +50,7 @@
 		"vuex": "^3.1.3"
 	},
 	"devDependencies": {
+		"@henris/utils": "0.0.19",
 		"@rollup/plugin-alias": "^3.0.1",
 		"@rollup/plugin-commonjs": "^11.0.2",
 		"@rollup/plugin-node-resolve": "^7.1.1",
@@ -75,6 +78,7 @@
 		"jest-transform-css": "^2.0.0",
 		"prettier": "^1.19.1",
 		"rollup": "^2.0.4",
+		"rollup-plugin-buble": "^0.19.8",
 		"rollup-plugin-copy": "^3.3.0",
 		"rollup-plugin-includepaths": "^0.2.3",
 		"rollup-plugin-peer-deps-external": "^2.2.2",
